--- a/index.scss
+++ b/index.scss
@@ -8,11 +8,12 @@ html {
 .page {
   min-height: 100vh;
   background-color: #141b1c;
+  display: flex;
 }
 .price-cards {
   display: flex;
-  justify-content: center;
-  padding: 115px 132px;
+  margin: auto;
+  align-items: center;
   overflow: auto;
 }
 .price-card {
@@ -52,6 +53,7 @@ html {
 
   &__description {
     width: 327px;
+    margin: 0;
     margin-top: 40px;
     text-align: center;
     font-weight: 300;
