--- a/styles.css
+++ b/styles.css
@@ -10,12 +10,13 @@ html {
 .page {
   min-height: 100vh;
   background-color: #141b1c;
+  display: flex;
 }
 
 .price-cards {
   display: flex;
-  justify-content: center;
-  padding: 115px 132px;
+  margin: auto;
+  align-items: center;
   overflow: auto;
 }
 
@@ -54,6 +55,7 @@ html {
 }
 .price-card__description {
   width: 327px;
+  margin: 0;
   margin-top: 40px;
   text-align: center;
   font-weight: 300;
