--- a/index.scss
+++ b/index.scss
@@ -26,6 +26,9 @@ html {
   flex-direction: column;
   align-items: center;
   position: relative;
+  &:last-child {
+    margin-right: 0;
+  }
   &__title {
     margin: 0;
     font-weight: 700;
