--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,9 @@ html {
   align-items: center;
   position: relative;
 }
+.price-card:last-child {
+  margin-right: 0;
+}
 .price-card__title {
   margin: 0;
   font-weight: 700;
